--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,26 +1,26 @@
 <div class="currencySearch-container">
 
     <div  class="inputNumber">
-        <img src="assets/img/magnifier.png" class="icon-magnifier" alt="search-icon">
         <input
             #inputNumber
             min="0"
             type="number"
             [(ngModel)]="assetService.amountInput"
-            (ngModelChange)="assetService.calculateExchange()" >
-        
+            (ngModelChange)="assetService.calculateExchange()" 
+            [class.hideIcon]="inputNumber.focus"
+            >
     </div>   
             <!-- position rel -->
     <div class="searchAssetContainer">
-        <img src="assets/img/magnifier.png" class="icon-magnifier" alt="search-icon">
         <input 
             id='inputfieldSearchAsset'
             class="inputAsset"
             min="2" 
             [(ngModel)]="assetInput" 
-            (ngModelChange)="getSearchData(); assetService.calculateExchange()"
+            (ngModelChange)="getSearchData()"
             (focus)="toggleList(true)"   
-            [value]="assetService.requestedAssetID  | titlecase"       
+            [value]="assetService.requestedAssetID  | titlecase"  
+            autofocus  
             >
             
             <!-- position absolute -->
@@ -30,7 +30,8 @@
             (mouseenter)="toggleList(true)"
             class="filteredAssetOptions">
                 <ul             
-                *ngFor="let asset of filteredAsset; index as i" (click)="updateRequestedAsset(asset, $event)">
+                    *ngFor="let asset of filteredAsset; index as i" 
+                    (click)="updateRequestedAsset(asset, $event)">
                     {{ asset | titlecase}}
                 </ul>
         </li>
