--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -13,11 +13,10 @@
     overflow: auto;
     transition: all 200ms ease-in-out;
 
-
     @media (max-width: 500px) {
         padding: 34px 10px !important;
-    }    
-    
+    }
+
     @media (max-width: 900px) {
         border-top-left-radius: 0px !important;
     }
@@ -37,7 +36,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: start;
-    height: 100%; 
+    height: 100%;
     transition: all ease-in-out 400ms;
 }
 
@@ -62,7 +61,6 @@ app-graph {
         left: 1rem;
     }
 }
-
 
 .infoContainer {
     display: flex;
@@ -115,9 +113,24 @@ app-graph {
 
 .shortText {
     margin-bottom: 10px;
+    max-height: 120px;
+    transition: all 1s linear;
+
+    &.expandAnimation {
+        max-height: 800px;
+    }
 
     @media (max-width: 1100px) {
         margin-bottom: 10px;
+    }
+}
+
+@keyframes expand {
+    from {
+        max-height: 0px;
+    }
+    to {
+        max-height: 420px;
     }
 }
 
