bottom-margin adjusted (shortText)

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -63,7 +63,7 @@
             <span 
                 *ngIf="fulltextRequested" 
                 (click)="fullText('close')" 
-                class="readMore readmore-open">   
+                class="readMore">   
                 ... show less
             </span>
         </div>
@@ -82,7 +82,7 @@
             <span 
                 *ngIf="fulltextRequested" 
                 (click)="fullText('close')" 
-                class="readMore readmore-open">   
+                class="readMore">   
                 ... show less
             </span>
         </div>
