--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -146,6 +146,7 @@ app-graph {
     }
 }
 
+
 .desktopOnly {
     @media (max-width: 1100px) {
         display: none;
@@ -165,4 +166,8 @@ app-graph {
     color: var(--accent2);
     margin-right: 4px;
     font-weight: var(--font-bold);
+}
+
+.bottomMargin{
+    padding-bottom: 16px;
 }
