--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -74,7 +74,7 @@
                 [class.bottomMargin]="fulltextRequested">
             </span>
             <span 
-                *ngIf="!fulltextRequested" 
+                *ngIf="!fulltextRequested && assetInfotext.length > 300" 
                 (click)="fullText('open')" 
                 class="readMore">   
                 ... read more
