--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -69,7 +69,7 @@ a {
         &::after {
             content: "";
             // inactive background for graph tab
-            background-color: rgba(122, 134, 146, 0.469);
+            background-color: rgba(122, 134, 146, 0.594);
             border-top-left-radius: 4px;
             border-top-right-radius: 16px;
             width: 100%;
@@ -79,6 +79,9 @@ a {
             left: 0;
             right: 0;
             z-index: 1;
+         -webkit-box-shadow: inset 13px -11px 7px -4px rgba(0,53,69,0.42); 
+box-shadow: inset 13px -11px 7px -4px rgba(0,53,69,0.42);
+
         }
     }
 
@@ -96,7 +99,7 @@ a {
             position: absolute;
             content: "";
             // inactive background for table tab
-            background-color: rgba(122, 134, 146, 0.469);
+            background-color: rgba(122, 134, 146, 0.594);
             border-top-left-radius: 16px;
             border-top-right-radius: 4px;
             width: 100%;
@@ -105,7 +108,9 @@ a {
             left: 0;
             right: 0;
             z-index: 1;
-        }
+            -webkit-box-shadow: inset -13px -13px 7px -4px rgba(0,53,69,0.42); 
+            box-shadow: inset -13px -13px 7px -4px rgba(0,53,69,0.42);
+                }
     }
 
     .graph {
