--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -35,7 +35,7 @@ a {
 .wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     height: 100%;
     transition: all ease-in-out 400ms;
 }
