bugfix Sidebar Size H1, mat-tooltip font-size

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -31,8 +31,6 @@ a {
         position: absolute;
         left: 50%;
         transform: translate(-50%, 0) !important;
-
-        // transform: translateX(-50%);
     }
 }
 
@@ -78,9 +76,8 @@ a {
             left: 0;
             right: 0;
             z-index: 1;
-         -webkit-box-shadow: inset 13px -11px 7px -4px rgba(0,53,69,0.42); 
-box-shadow: inset 13px -11px 7px -4px rgba(0,53,69,0.42);
-
+            -webkit-box-shadow: inset 13px -11px 7px -4px rgba(0, 53, 69, 0.42);
+            box-shadow: inset 13px -11px 7px -4px rgba(0, 53, 69, 0.42);
         }
     }
 
@@ -106,9 +103,9 @@ box-shadow: inset 13px -11px 7px -4px rgba(0,53,69,0.42);
             left: 0;
             right: 0;
             z-index: 1;
-            -webkit-box-shadow: inset -13px -13px 7px -4px rgba(0,53,69,0.42); 
-            box-shadow: inset -13px -13px 7px -4px rgba(0,53,69,0.42);
-                }
+            -webkit-box-shadow: inset -13px -13px 7px -4px rgba(0, 53, 69, 0.42);
+            box-shadow: inset -13px -13px 7px -4px rgba(0, 53, 69, 0.42);
+        }
     }
 
     .graph {
@@ -147,14 +144,14 @@ box-shadow: inset 13px -11px 7px -4px rgba(0,53,69,0.42);
 
 .animationTabChangeGraph {
     animation: changeTab 200ms ease-in forwards;
-    -webkit-box-shadow: 14px 1px 14px -5px rgba(5,48,69,0.5); 
-    box-shadow: 14px 1px -10px -5px rgba(5,48,69,0.5);
+    -webkit-box-shadow: 14px 1px 14px -5px rgba(5, 48, 69, 0.5);
+    box-shadow: 14px 1px -10px -5px rgba(5, 48, 69, 0.5);
 }
 
 .animationTabChangeTable {
     animation: changeTab 200ms ease-in forwards;
-    -webkit-box-shadow: -14px 1px 14px -5px rgba(5,48,69,0.5); 
-    box-shadow: -14px -1px -14px -5px rgba(5,48,69,0.5);
+    -webkit-box-shadow: -14px 1px 14px -5px rgba(5, 48, 69, 0.5);
+    box-shadow: -14px -1px -14px -5px rgba(5, 48, 69, 0.5);
 }
 
 @keyframes changeTab {
