--- a/src/app/asset-section/asset-section.component.html
+++ b/src/app/asset-section/asset-section.component.html
@@ -6,7 +6,7 @@
     <div class="upperRow">
         <img class="image" src="{{ images[i] }}">
 
-        <div matTooltip="Order by current MC (Market Cap)" class="rankingNr">
+        <div matTooltip="Current MC Rank (Market Cap)" class="rankingNr">
             <span class="mcr">#</span> 
             <div class="nr">{{ assetRanks[i] }}</div>
         </div>
