--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -63,12 +63,12 @@ h1 {
     margin: 0;
     position: absolute;
     writing-mode: vertical-lr;
-    // left: -0;
     bottom: -20px;
     color: rgba(245, 245, 245, 0);
     font-size: 172px;
     font-weight: 900;
-    transform: translateX(-49px);
+    transform: translateX(24px);
+    // transform: translateX(-49px);
     -webkit-text-stroke: 1px rgb(177, 193, 195);
 
     @media (min-width: 1600px) {
