--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,15 +2,13 @@
     position: relative;
     background-color: var(--bg);
     display: flex;
-    justify-content: flex-start;
-    height: 100vh;
-    max-height: 100%;
+    justify-content: center;
     width: 100%;
     overflow: hidden;
 
-    @media (max-width: 1100px) {
-        height: max-content;
-        justify-content: center;
+    @media (min-width: 1100px) {
+        justify-content: flex-start;
+        height: 100vh;
     }
 }
 
